[tool.poetry]
name = "python-for-coding-test"
version = "0.1.0"
description = ""
authors = ["river <bluuminn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160