[project]
name = "coding-test-playground"
version = "0.1.0"
description = "Algorithm coding test solutions"
authors = [{ name = "river", email = "bluuminn@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = ["black==25.9.0"]

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.black]
line-length = 160
